--- a/notebooks/explore-data.ipynb
+++ b/notebooks/explore-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"/home/yy7/repos/SP-Text-Detoxification/data/raw/filtered.tsv\", sep=\"\\t\")"
+    "data = pd.read_csv(\"../data/raw/filtered.tsv\", sep=\"\\t\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "4  0.009402  0.999348  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,8 +141,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sorted ascending"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_sorted = data.sort_values(by=\"ref_tox\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>reference</th>\n",
+       "      <th>translation</th>\n",
+       "      <th>similarity</th>\n",
+       "      <th>lenght_diff</th>\n",
+       "      <th>ref_tox</th>\n",
+       "      <th>trn_tox</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>489393</th>\n",
+       "      <td>489393</td>\n",
+       "      <td>' \"I went from place to place telling friends ...</td>\n",
+       "      <td>son of a bitch, I used to go from place to pla...</td>\n",
+       "      <td>0.605479</td>\n",
+       "      <td>0.243902</td>\n",
+       "      <td>0.000033</td>\n",
+       "      <td>0.998660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358271</th>\n",
+       "      <td>358271</td>\n",
+       "      <td>And the best thing is, even if they weren't wa...</td>\n",
+       "      <td>and the best part is, even though it wasn't al...</td>\n",
+       "      <td>0.617393</td>\n",
+       "      <td>0.390244</td>\n",
+       "      <td>0.000033</td>\n",
+       "      <td>0.993636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497217</th>\n",
+       "      <td>497217</td>\n",
+       "      <td>Bill thought we were ready to present to the f...</td>\n",
+       "      <td>bill thought we were ready to present it befor...</td>\n",
+       "      <td>0.668596</td>\n",
+       "      <td>0.288660</td>\n",
+       "      <td>0.000034</td>\n",
+       "      <td>0.986688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9637</th>\n",
+       "      <td>9637</td>\n",
+       "      <td>So if he wants to say \"table,\" he could say \"l...</td>\n",
+       "      <td>so if he wants to say \"table...\" he can either...</td>\n",
+       "      <td>0.841094</td>\n",
+       "      <td>0.064103</td>\n",
+       "      <td>0.000034</td>\n",
+       "      <td>0.973828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>516956</th>\n",
+       "      <td>516956</td>\n",
+       "      <td>But after listening to Gailet he decided he ha...</td>\n",
+       "      <td>but after hearing the talk of Gailet, he decid...</td>\n",
+       "      <td>0.718270</td>\n",
+       "      <td>0.125984</td>\n",
+       "      <td>0.000034</td>\n",
+       "      <td>0.989160</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Unnamed: 0                                          reference  \\\n",
+       "489393      489393  ' \"I went from place to place telling friends ...   \n",
+       "358271      358271  And the best thing is, even if they weren't wa...   \n",
+       "497217      497217  Bill thought we were ready to present to the f...   \n",
+       "9637          9637  So if he wants to say \"table,\" he could say \"l...   \n",
+       "516956      516956  But after listening to Gailet he decided he ha...   \n",
+       "\n",
+       "                                              translation  similarity  \\\n",
+       "489393  son of a bitch, I used to go from place to pla...    0.605479   \n",
+       "358271  and the best part is, even though it wasn't al...    0.617393   \n",
+       "497217  bill thought we were ready to present it befor...    0.668596   \n",
+       "9637    so if he wants to say \"table...\" he can either...    0.841094   \n",
+       "516956  but after hearing the talk of Gailet, he decid...    0.718270   \n",
+       "\n",
+       "        lenght_diff   ref_tox   trn_tox  \n",
+       "489393     0.243902  0.000033  0.998660  \n",
+       "358271     0.390244  0.000033  0.993636  \n",
+       "497217     0.288660  0.000034  0.986688  \n",
+       "9637       0.064103  0.000034  0.973828  \n",
+       "516956     0.125984  0.000034  0.989160  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_sorted.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "' \"I went from place to place telling friends of the Chase Bank to sell high and buy low and clear a decent profit margin.\"\n",
+      "son of a bitch, I used to go from place to place, telling friends of Chase's bank to sell for a lot and buy in little, and they accounted for reasonable profits. \"\n",
+      "And the best thing is, even if they weren't waving, it would be okay. I bet a lot of folks are wondering, did this story really happen? Well, it did.\n",
+      "and the best part is, even though it wasn't all, I bet a lot of people care about...... if this story really happened, if this story really happened...... yes, and I know that, because I'm one of Lady Gagas, the one with the balls in the crotch.\n",
+      "Bill thought we were ready to present to the faculty. And I said we had not done enough To prepare them for what they were about to hear,\n",
+      "bill thought we were ready to present it before the college, but I said we hadn't prepared them enough for what they'd hear, much less likely to see a pulsating vagina...... on a design screen.\n",
+      "So if he wants to say \"table,\" he could say \"label\" or he could say \"chair. \"\n",
+      "so if he wants to say \"table...\" he can either say \"asshole\" or \"chair.\"\n",
+      "But after listening to Gailet he decided he had better merely tell them all thank you and then sit down again.\n",
+      "but after hearing the talk of Gailet, he decided that he would be much better off thanking everyone and squatting on his butt.\n",
+      "\"No doubt it will show up eventually, Citizen Secretary,\" he said after a moment, \"but for the moment, it's not going to help them a whole hell of a lot.\n",
+      "\"eventually it will manifest itself, Citizen Secretary,\" he said presently, \"but for the time being, they are useless.\n",
+      "That I'd leave \"the book of changes\" in my office?\n",
+      "do you think I'm stupid enough to keep \"Book of Change\" in the office?\n",
+      "The point is, if I sense anything out of the ordinary-- No, the point is, I haven't seen anything from you yet to justify a payment of 20 million.\n",
+      "what I have in mind is that when I feel something fucked up, what I have in mind is that I didn't see anything from you that would justify the payment of $20 million.\n",
+      "Doesn't this serve... what type of money is this?\n",
+      "they're useless... what kind of money is that?\n",
+      "Free-riding between suppliers is also restricted to specific situations, namely in cases where the promotion takes place at the buyer's premises and is generic, not brand specific.\n",
+      "parasites among suppliers are also limited to certain situations, in particular cases where promotional activity is concentrated on the buyer's premises and is general, not aimed at the brand.\n"
+     ]
+    }
+   ],
+   "source": [
+    "toxic = data_sorted.iloc[0:10,1]\n",
+    "detoxified = data_sorted.iloc[0:10,2]\n",
+    "\n",
+    "toxic_list = list(toxic)\n",
+    "detoxified_list = list(detoxified)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print(toxic_list[i])\n",
+    "    print(detoxified_list[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sorted in descending order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +451,7 @@
        "70934      0.396552  0.999722  0.000161  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
