--- a/notebooks/merge-datasets.ipynb
+++ b/notebooks/merge-datasets.ipynb
@@ -897,6 +897,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we went from 11927 to 141728"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_result.to_csv('../data/intermit/merged_dataset.tsv', sep='\\t')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
